[gd_scene load_steps=15 format=3 uid="uid://b4dc6dj7uyqfb"]

[ext_resource type="Texture2D" uid="uid://cgfcigtfl1etg" path="res://icons/ion_mic.png" id="1_8e41i"]
[ext_resource type="Script" path="res://screens/main_screen.gd" id="1_ex4ux"]
[ext_resource type="Texture2D" uid="uid://cecf5mbs860po" path="res://assets/shape_ellipse_003.png" id="2_rchmv"]
[ext_resource type="Texture2D" uid="uid://cyifjcif1x6bb" path="res://assets/shape_ellipse_002.png" id="3_1o5xj"]
[ext_resource type="Texture2D" uid="uid://dq7xfje77of4h" path="res://assets/shape_ellipse_001.png" id="4_pilhi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oj8p8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_37y6s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v6yyx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t10sp"]

[sub_resource type="Animation" id="Animation_du23a"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EllipsePress:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EllipsePress:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_ahrkg"]
resource_name = "idle_button"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EllipseVoice:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EllipsePress:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackgroundColor:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_mbjty"]
resource_name = "press_button"
length = 0.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EllipsePress:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EllipsePress:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackgroundColor:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.95, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackgroundColor:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.95, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jdjph"]
_data = {
"RESET": SubResource("Animation_du23a"),
"idle_button": SubResource("Animation_ahrkg"),
"press_button": SubResource("Animation_mbjty")
}

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_03try"]

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ex4ux")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.894118, 0.894118, 0.894118, 1)

[node name="RecordButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = 116.5
offset_right = 42.5
offset_bottom = 201.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/icon_max_width = 42
theme_override_styles/normal = SubResource("StyleBoxEmpty_oj8p8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_37y6s")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v6yyx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_t10sp")

[node name="EllipseVoice" type="TextureRect" parent="RecordButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -62.5
offset_right = 62.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(62, 62)
texture = ExtResource("2_rchmv")
expand_mode = 1

[node name="EllipsePress" type="TextureRect" parent="RecordButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -52.5
offset_right = 52.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(52, 52)
texture = ExtResource("3_1o5xj")
expand_mode = 1

[node name="BackgroundColor" type="TextureRect" parent="RecordButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -42.5
offset_right = 42.5
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.95, 0.95)
pivot_offset = Vector2(42, 42)
texture = ExtResource("4_pilhi")
expand_mode = 1

[node name="Icon" type="TextureRect" parent="RecordButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -21.0
offset_right = 21.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8e41i")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="RecordButton"]
autoplay = "idle_button"
libraries = {
"": SubResource("AnimationLibrary_jdjph")
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="RecordStream" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_03try")
autoplay = true
bus = &"Record"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -119.5
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2

[node name="Phoneme" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.137255, 0.137255, 0.137255, 1)
theme_override_font_sizes/font_size = 42
text = "Unknown"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pronunciation" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.137255, 0.137255, 0.137255, 1)
theme_override_font_sizes/font_size = 32
text = "Unknown"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="RecordButton" to="." method="_on_record_button_button_down"]
[connection signal="button_up" from="RecordButton" to="." method="_on_record_button_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
